# phonikud-self-stress-test

./: .gitignore  README.md  analyze.py  create_report.py  create_visual.py  generate_audio.py  llm1.csv  main.py  mms.py  pyproject.toml  report.json  results.csv  saspeech_10.csv  styletts2.py  tts-model.config.json
data/: result_kobi.csv  result_yakov.csv  text_llm1.csv
web/: index.html  stress_test_sentences.csv
web/audio/: mms_nakdimon_gold_000_line_101.m4a  mms_nakdimon_gold_001_line_348.m4a  mms_nakdimon_gold_002_line_310.m4a  mms_nakdimon_gold_007_line_150.m4a  mms_nakdimon_gold_011_line_114.m4a  mms_nakdimon_gold_017_line_048.m4a  mms_nakdimon_gold_020_line_002.m4a  mms_nakdimon_gold_021_line_014.m4a  mms_nakdimon_gold_021_line_040.m4a  mms_nakdimon_gold_021_line_057.m4a  mms_nakdimon_llm1_1.m4a  mms_nakdimon_llm1_10.m4a  mms_nakdimon_llm1_100.m4a  mms_nakdimon_llm1_101.m4a  mms_nakdimon_llm1_102.m4a  mms_nakdimon_llm1_103.m4a  mms_nakdimon_llm1_104.m4a  mms_nakdimon_llm1_105.m4a  mms_nakdimon_llm1_106.m4a  mms_nakdimon_llm1_107.m4a  mms_nakdimon_llm1_108.m4a  mms_nakdimon_llm1_109.m4a  mms_nakdimon_llm1_11.m4a  mms_nakdimon_llm1_110.m4a  mms_nakdimon_llm1_111.m4a  mms_nakdimon_llm1_112.m4a  mms_nakdimon_llm1_113.m4a  mms_nakdimon_llm1_114.m4a  mms_nakdimon_llm1_115.m4a  mms_nakdimon_llm1_116.m4a  mms_nakdimon_llm1_117.m4a  mms_nakdimon_llm1_118.m4a  mms_nakdimon_llm1_119.m4a  mms_nakdimon_llm1_12.m4a  mms_nakdimon_llm1_120.m4a  mms_nakdimon_llm1_121.m4a  mms_nakdimon_llm1_122.m4a  mms_nakdimon_llm1_123.m4a  mms_nakdimon_llm1_124.m4a  mms_nakdimon_llm1_125.m4a  (+1710 more)
