[project]
name = "phonikud-self-stress-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nakdimon-onnx>=0.1.0",
    "pandas>=2.3.0",
    "phonikud",
    "phonikud-onnx>=1.0.4",
    "phonikud-tts>=0.1.3",
    "piper-onnx>=1.0.6",
]

[tool.uv.sources]
phonikud = { git = "https://github.com/thewh1teagle/phonikud" }
