[project]
name = "phonikud-self-stress-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "nakdimon-onnx>=0.1.0",
    "numpy==2.0.0",
    "pandas>=2.3.0",
    "phonikud",
    "phonikud-onnx>=1.0.4",
    "phonikud-tts>=0.1.3",
    "piper-onnx>=1.0.6",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "transformers>=4.53.0",
]

[tool.uv.sources]
phonikud = { git = "https://github.com/thewh1teagle/phonikud" }
